--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 
     <h1>Blog home page</h1>
     <% @posts.each do |post|%>
-    <h2><%= post.title %></h2>
+    <h2><%= link_to post.title, post %></h2>
     <p><%= post.body %></p>
     <% end %>
