remove method and url from edit page

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,4 @@
 <h1> edit post </h1>
 <%= render partial: 'form', locals:{
-    post: @post,
-    url: post_path(@post),
-    method: :patch
+    post: @post
 } %>
