--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,3 +2,5 @@
 <%= render partial: 'form', locals:{
     post: @post
 } %>
+
+<%= button_to 'Delete', @post , method: :delete, data:{turbo_confirm: "Are you sure?"} %>
