--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,12 @@
 
     <h1>Blog home page</h1>
     <% @posts.each do |post|%>
+      <% if post.draft? %>
+        <div class="p-2 rounded bg-gray-100 text-gray-900">Draft</div>
+     <%elsif post.scheduled? %>
+        <div class="p-2 rounded bg-blue-100 text-blue-900">Scheduled</div>
+      <%end %>
     <h2><%= link_to post.title, post %></h2>
     <p><%= post.body %></p>
+
     <% end %>
