--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,6 +7,6 @@
         <div class="p-2 rounded bg-blue-100 text-blue-900">Scheduled</div>
       <%end %>
     <h2><%= link_to post.title, post %></h2>
-    <p><%= post.body %></p>
+    <p><%= post.content %></p>
 
     <% end %>
