add navbar partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="prose mx-auto mb-10">
+  <body class="">
+  <%= render partial: 'posts/navbar' %>
        <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 
