--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,20 +11,12 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="">
+  <body class="bg-[#EFECEC]">
   <%= render partial: 'posts/navbar' %>
        <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 
-       <div>
-        <% if user_signed_in? %>
-        <%= link_to 'Profile', edit_user_registration_path %> 
-        <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
-        <% else %>
-        <%= link_to 'Login', new_user_session_path %>
-        <%= link_to 'Sign up', new_user_registration_path %>
-        <% end %>
-       </div>
+
     <%= yield %>
   </body>
 </html>
