--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -1,15 +1,37 @@
-<nav class="w-full mx-auto flex justify-between items-center px-10 h-[56px]">
+<nav class="w-full mx-auto flex justify-between items-center px-10 h-[96px] text-[#FC3736] bg-[#0C2D57] font-medium text-lg">
   <div>
-    <h1>CTD Blog</h1>
+    <h1>CTD Rails</h1>
   </div>
   <ul class="flex items-center justify-center gap-8">
-    <li>Home</li>
-    <li>Ruby</li>
-    <li>React</li>
-    <li>Register</li>
-    <li>Signin</li>
+
+
     <li>
-      Logout
+      <%= link_to 'Home', root_path %>
     </li>
+    <li>
+      <%= link_to "About", about_path %>
+    </li>
+
+
+    <% if user_signed_in? %>
+      <li>
+        <%= link_to 'Write', new_post_path %>
+      </li>
+      <li>
+        <%= link_to 'Profile', edit_user_registration_path %>
+      </li>
+
+      <li>
+        <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
+      </li>
+    <% else %>
+      <li>
+        <%= link_to 'Login', new_user_session_path %>
+      </li>
+      <li>
+        <%= link_to 'Sign up', new_user_registration_path %>
+      </li>
+    <% end %>
+
   </ul>
 </nav>
