--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,17 @@
 
-    <h1>Blog home page</h1>
+ <div class='h-[40vh]'
+  style="
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(https://images.pexels.com/photos/1181263/pexels-photo-1181263.jpeg?auto=compress&cs=tinysrgb&w=600);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  "
+>
+  <%# home page banner %>
+  <h1>Welcome to CTD Rails</h1>
+  <p>Collection of blog articles focused on Ruby on Rails, to help you learn and grow as a developer.</p>
+</div>
+
     <% @posts.each do |post|%>
       <% if post.draft? %>
         <div class="p-2 rounded bg-gray-100 text-gray-900">Draft</div>
