--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 
 
-<div class="card mb-4 border-2 p-5">
+<div class="card mb-4 border-2 w-full max-w-[300px]">
   <div class="card-body">
     <div>
       <% if post.draft? %>
@@ -12,7 +12,9 @@
     <div>
        <%= image_tag post.cover_image if post.cover_image.present? %>
     </div>
-    <h2 class="card-title"><%= link_to post.title, post_path(post) %></h2>
-    <p class="card-text"><%= post.content %></p>
+    <div class='p-3'>
+      <h2 class="text-2xl text-[#0C2D57] font-medium"><%= link_to post.title, post_path(post) %></h2>
+    <p class="card-text text-base"><%= post.content %></p>
+      </div>
   </div>
 </div>
