--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,6 @@
 
- <div class='h-[40vh] text-[#FFB0B0] flex flex-col justify-center items-center'
-  style="
-    background-image: linear-gradient(to bottom, rgba(1,2,3,0.7), rgba(0,0,0,0.7)), url(https://images.pexels.com/photos/1181263/pexels-photo-1181263.jpeg?auto=compress&cs=tinysrgb&w=1200);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-  "
+ <div class='h-[40vh] text-[#0C2D57] flex flex-col justify-center items-center mb-10'
+
 >
   
   <h1 class="text-4xl font-bold">Welcome to CTD Rails</h1>
