--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,6 @@
-<h1>New Blog Post </h1>
+
+<div class='flex justify-center items-center p-10 text-[#0C2D57]'>
 
 <%= render partial: 'form', locals:{post: @post} %>
+
+</div>
