--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,14 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class='p-10 '>
+
+  <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+<div class="flex flex-col gap-5 mb-5" >
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email",  class: "rounded-sm border-0 focus:ring-0" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -14,7 +17,7 @@
 
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password",  class: "rounded-sm border-0 focus:ring-0" %>
     <% if @minimum_password_length %>
       <br />
       <em><%= @minimum_password_length %> characters minimum</em>
@@ -23,21 +26,34 @@
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password",  class: "rounded-sm border-0 focus:ring-0" %>
   </div>
 
   <div class="field">
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+    <%= f.password_field :current_password, autocomplete: "current-password",  class: "rounded-sm border-0 focus:ring-0" %>
   </div>
 
   <div class="actions">
+    <span class='bg-[#0C2D57] text-white rounded py-3 px-5 mt-6'>
     <%= f.submit "Update" %>
+    </span>
+  </div>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
 
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
+<h3 class="text-2xl font-medium">Cancel my account</h3>
 
+<div class='flex gap-10 items-start justify-start'>
+  <div class="mb-3">Unhappy? 
+
+  <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete , class: "bg-[#0C2D57] text-white rounded py-3 px-5"%>
+ 
+  </div>
+
+  <span class='bg-[#0C2D57] text-white rounded py-3 px-5 mt-6'>
 <%= link_to "Back", :back %>
+</span>
+  </div>
+  </div>
