--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Sign up</h2>
+<div class='p-10'>
+  <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -21,9 +22,13 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div class="actions">
+  <div class="actions py-5">
+     <span class='bg-[#0C2D57] text-white rounded py-3 px-5 mt-6'>
     <%= f.submit "Sign up" %>
+    </span>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+  </div>
