fix post content text size

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
        <p class="alert"><%= alert %></p>
 
 
-    <%= yield %>
+   <div class="mt-24">
+     <%= yield %>
+    </div>
   </body>
 </html>
