--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="w-full mx-auto flex justify-between items-center px-10 h-[96px] text-[#FC3736] bg-[#0C2D57] font-medium text-lg">
+<nav class="w-full mx-auto flex justify-between items-center px-10 h-[96px] text-[#FC3736] bg-[#0C2D57] font-semibold text-lg fixed top-0 mb-6">
   <div>
     <h1>CTD Rails</h1>
   </div>
