--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class='p-3'>
       <h2 class="text-2xl text-[#0C2D57] font-medium"><%= link_to post.title, post_path(post) %></h2>
-    <p class="card-text text-base"><%= post.content %></p>
+    <p class="card-text text-base line-clamp-5 text-[#0c2d57]"><%= post.content %></p>
       </div>
   </div>
 </div>
