--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,12 @@
-<h1> edit post </h1>
+<div class='flex flex-col gap-3 items-center p-10 text-[#0C2D57]'>
 <%= render partial: 'form', locals:{
     post: @post
 } %>
 
-<%= button_to 'Delete', @post , method: :delete, data:{turbo_confirm: "Are you sure?"} %>
+
+    <span class='bg-[#e21313] text-white rounded py-3 px-5 mt-6'>
+<%= button_to 'Delete', @post , method: :delete, data:{turbo_confirm: "Are you sure?"}  %>
+
+</div>
+
+</div>
