--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,7 @@
   <p class='text-2xl'>Collection of blog articles focused on Ruby on Rails, to help you learn and grow as a developer.</p>
 </div>
 
-    <div class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-4 py-6">
+    <div class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-4 py-6 gap-6 px-3">
       <% @posts.each do |post|%>
      <%= render partial: 'post', locals:{
           post: post
