--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,7 +7,8 @@
     <p class="text-xl"><%= @post.content %></p>
   </div>
   
-  <div class="flex justify-center">
+  <div class="flex justify-center gap-6">
     <%= link_to 'Back', root_path, class: 'bg-[#FC3736] text-white px-4 py-2 rounded-lg' %>
+    <%= link_to 'Edit', edit_post_path, class: 'bg-[#FC3736] text-white px-4 py-2 rounded-lg' %>
     </div>
 </div>
