add border to post card

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 
 
-<div class="card mb-4 w-full max-w-[300px] h-full max-h-[400px] overflow-hidden  border-2 rounded-md pb-5 mx-auto">
+<div class="card mb-4 w-full max-w-[300px] h-full max-h-[400px] overflow-hidden  border border-[#cbdef7] rounded-md pb-5 mx-auto">
   <div class="card-body">
     <div>
       <% if post.draft? %>
