--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 
- <div class='h-[40vh] text-[#0C2D57] flex flex-col justify-center items-center mb-10'
+ <div class='h-[40vh] text-[#0C2D57] flex flex-col justify-center items-center mb-10 px-5 text-center'
 
 >
   
