fix post margin

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="p-14 flex flex-col gap-6 text-[#0C2D57]">
+<div class="px-5 sm:p-14 flex flex-col gap-6 text-[#0C2D57]">
   <div class="w-full  h-full mx-auto">
     <%= image_tag @post.cover_image , class: 'rounded-lg object-cover h-[300px] w-full' if @post.cover_image.present? %>
   </div>
