--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with model: post, data: {turbo: false}  do |f| %>
+<div class="">
+  <%= form_with model: post, data: {turbo: false}  do |f| %>
 
  
     <% if @post.errors.any? %>
@@ -43,3 +44,5 @@
   </span>
 
 <% end %>
+
+  </div>
