--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="">
+<div class=" max-w-screen w-full px-5 mx-auto">
   <%= form_with model: post, data: {turbo: false}  do |f| %>
 
  
@@ -21,7 +21,7 @@
 
 <div class='flex flex-col gap-2'>
   <%= f.label :title, "Title" %>
-  <%= f.text_field :title, class: "rounded-sm border-0 focus:ring-0" %>
+  <%= f.text_field :title, class: "rounded-sm border-0 focus:ring-0 w-full" %>
 </div>
 
 <div class='flex flex-col gap-2 mt-3'>
@@ -31,13 +31,13 @@
   </div>
 
 <div class='gap-2 flex flex-col my-3'>
-  <%= f.label :content, "Content" %>
+  <%= f.label :content, "Content" , class: "w-full"%>
   <%= f.rich_text_area :content%>
 </div>
 
-<div class='flex gap-2 my-3 justify-start items-end'>
+<div class='flex flex-col sm:flex-row  gap-2 my-3 justify-start items-end'>
   <%= f.label :published_at %>
-  <%= f.datetime_select :published_at, include_blank: true %>
+  <%= f.datetime_select :published_at, include_blank: true , class: "w-full" %>
 </div>
  <span class='bg-[#0C2D57] text-white rounded py-3 px-5 mt-6'>
     <%= f.button %>
