make the navbar responsive

--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -1,8 +1,8 @@
-<nav class="w-full mx-auto flex justify-between items-center px-10 h-[96px] text-[#FC3736] bg-[#0C2D57] font-semibold text-lg fixed top-0 mb-6">
-  <div>
-    <h1>CTD Rails</h1>
+<nav class="w-full mx-auto flex justify-between items-center px-10 h-[96px] text-[#FC3736] bg-[#0C2D57] font-semibold text-lg fixed top-0 mb-6 max-w-screen">
+  <div class="w-full">
+    <%= link_to 'CTD Rails', root_path, class: ' text-3xl' %>
   </div>
-  <ul class="flex items-center justify-center gap-8">
+  <ul class="flex flex-wrap sm:flex-nowrap items-center justify-center gap-2 sm:gap-8">
 
 
     <li>
