--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,13 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="bg-[#EFECEC]">
+  <body class="bg-[#EFECEC] max-w-screen">
   <%= render partial: 'posts/navbar' %>
        <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 
 
-   <div class="mt-24">
+   <div class="mt-24 ">
      <%= yield %>
     </div>
   </body>
