fix published at input field

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -35,7 +35,7 @@
   <%= f.rich_text_area :content%>
 </div>
 
-<div class='flex flex-col sm:flex-row  gap-2 my-3 justify-start items-end'>
+<div class='flex flex-col mx-auto mb-3 sm:flex-row  gap-2 my-3 justify-start items-end'>
   <%= f.label :published_at %>
   <%= f.datetime_select :published_at, include_blank: true , class: "w-full" %>
 </div>
