--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -29,7 +29,7 @@
         <%= link_to 'Login', new_user_session_path %>
       </li>
       <li>
-        <%= link_to 'Sign up', new_user_registration_path %>
+        <%= link_to 'Signup', new_user_registration_path, class: "flex flex-shrink-0 w-full" %>
       </li>
     <% end %>
 
