--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,7 +7,7 @@
     <span class='bg-[#e21313] text-white rounded py-3 px-5 mt-6'>
 
 <%# check if the post belongs to the authenticated user, if it is the case, display delete button %>
-<% if @post.user.email == current_user %>
+<% if @post.user.email == current_user.email %>
    <%= button_to 'Delete', @post , method: :delete, data:{turbo_confirm: "Are you sure?"}  %>
 <% end %>
 
