--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
 
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 py-6 gap-6 px-3 mx-auto">
       <% @posts.each do |post|%>
-     <% if (post.draft? || post.scheduled?) && post.user.email != current_user %>
+     <% if (post.draft? || post.scheduled?) && post.user.email != current_user.email %>
       <% next %>
       <% end %>
       <%= render partial: 'post', locals:{
@@ -25,3 +25,6 @@
     <%= pagy_bootstrap_nav(@pagy) %>
     <% end %>
   </div>
+
+
+ 
