--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,9 @@
   <div class="flex justify-center gap-6">
     <%= link_to 'Back', root_path, class: 'bg-[#FC3736] text-white px-4 py-2 rounded-lg' %>
 
-     <% if user_signed_in? && @post.user.email == current_user %>
+     <% if user_signed_in? && @post.user.email == current_user.email %>
+
+     
     
     <%= link_to 'Edit', edit_post_path, class: 'bg-[#FC3736] text-white px-4 py-2 rounded-lg' %>
     <% end %>
